[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name        = 'asyncssh'
license     = {text = 'EPL-2.0 OR GPL-2.0-or-later'}
description = 'AsyncSSH: Asynchronous SSHv2 client and server library'
readme      = 'README.rst'
authors     = [{name = 'Ron Frederick', email = 'ronf@timeheart.net'}]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Internet',
    'Topic :: Security :: Cryptography',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Networking',
]
requires-python = '>= 3.6'
dependencies    = [
    'cryptography >= 39.0',
    'typing_extensions >= 4.0.0',
]
dynamic = ['version']

[project.optional-dependencies]
bcrypt    = ['bcrypt >= 3.1.3']
fido2     = ['fido2 >= 0.9.2, < 2']
gssapi    = ['gssapi >= 1.2.0']
libnacl   = ['libnacl >= 1.4.2']
pkcs11    = ['python-pkcs11 >= 0.7.0']
pyOpenSSL = ['pyOpenSSL >= 23.0.0']
pywin32   = ['pywin32 >= 227']


[project.urls]
Homepage      = 'http://asyncssh.timeheart.net'
Documentation = 'https://asyncssh.readthedocs.io'
Source        = 'https://github.com/ronf/asyncssh'
Tracker       = 'https://github.com/ronf/asyncssh/issues'

[tool.setuptools.dynamic]
version = {attr = 'asyncssh.version.__version__'}

[tool.setuptools.packages.find]
include = ['asyncssh*']

[tool.setuptools.package-data]
asyncssh = ['py.typed']
